Fix issue with tables on smalls screens (#165)
* Fix issue with tables on smalls screens

* Implementation page

--- a/content-assets/wcag-act-rules/act-styles.css
+++ b/content-assets/wcag-act-rules/act-styles.css
@@ -2,6 +2,12 @@ nav.nav li:last-of-type {
   display: none;
 }
 
+/* For tables wider than the viewport */
+.scroll-wrap {
+  width: 100%;
+  overflow-x: auto;
+}
+
 table.act-implementations {
   width: 100%;
 }
